[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "backtesting>=0.6.4",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "ta>=0.11.0",
    "vectorbt>=0.27.1",
]
